# face-cropper

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
benches/: benchmark.sh  my_benchmark.rs
python-face-cropper/: main.py  pyproject.toml
src/: config.rs  face_detect.rs  lib.rs  main.rs  pipeline.rs
