[package]
name = "face-cropper"
version = "0.1.0"
authors = ["Bhargav Acharya <bacharya@techfak.uni-bielefeld.de>"]
edition = "2021"

[dependencies]
opencv = {version = "0.94.4" ,features = ["clang-runtime", "videoio", "face", "imgproc"] }
glob = "0.3.2"
clap = { version = "4.0", features = ["derive"] }
tempfile = "3.20.0"
anyhow = "1.0.98"
indicatif = {version="0.17.11", features=["rayon"]}
rayon = "1.10.0"

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "my_benchmark"
harness = false
